syntax = "proto3";

import "iot_common.proto";

/** A response message of an ota update status response. */
message IotOtaStatusResponse {
  IotResponseStatus status = 1; /**< The status of the update. */
  string compile_time = 2;      /**< The compile time of the update. */
  string compile_date = 3;      /**< The compile date of the update. */
  string version = 4;           /**< The version of the update. */
}